<!--
  ~  Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      https://mindorks.com/license/apache-v2
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<resources>
    <string name="app_name">WLB Learning</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>

    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVVM architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvvm_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvvm_repo">2. https://github.com/MindorksOpenSource/android-mvvm-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <!---->
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="forgot">Forgot your login details ?</string>
    <string name="help">Get help signing in</string>
    <string name="reg_fname">First Name</string>
    <string name="reg_lname">Last Name</string>
    <string name="reg_email">Email</string>
    <string name="cpassword">Confirm Password</string>
    <string name="reg_ahaccount">All ready have an account ?</string>
    <string name="next">Next</string>
    <string name="r_wlocation">Where is your location?</string>
    <string name="step2getstarted">What type of work  do you do?</string>
    <string name="r_s2_info">You will get related recommendations from us</string>
    <string name="postal_code">Postal Code *</string>
    <string name="r_job">Recent job *</string>
    <string name="tlead">Technical Lead</string>
    <string name="add_picture">Add your profile picture</string>
    <string name="r_s4_info">Help people recognize you</string>
    <string name="error_format_invalid">Error Login</string>
    <string name="error_too_short">Email Terlalu Pendek</string>
    <string name="password">Password</string>
    <string name="pwd_short">Password To Short</string>
    <string name="con_people">Connect to other people  you might know</string>
    <string name="letsconfrimmail">Let\'s confirm your email</string>
    <string name="r_s6_info">Verification code we sent to  %1$s</string>
    <string name="d_rcode">Didn\'t receive the code? </string>
    <string name="sent_again">send again ?</string>
    <string name="connection">Connection</string>
    <string name="views">Views</string>
    <string name="app_name_title"><![CDATA[Worklife&Beyond]]></string>
    <string name="about_wlb">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</string>
    <string name="search">Search</string>
    <string name="chat">chat</string>
    <string name="Summary">Summary</string>
    <string name="Experience">Experience</string>
    <string name="Education">Education</string>
    <string name="LExperience"><![CDATA[License & Experience]]></string>
    <string name="Skill">Skills</string>
    <string name="Recomendation">Recomendatition</string>
    <string name="lorem">I am currently a professional programmer. I want to expand my skillset, but I also want to make the career jump to being a dev lead as part of a team</string>
    <string name="content_profile">I am currently a professional programmer. I want to expand my skillset, but I also want to make the career jump to being a dev lead as part of a team. </string>
    <string name="save">Save</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="headline">Headline*</string>
    <string name="cur_pos">Current Position</string>
    <string name="previous_job">Previous Position</string>
    <string name="country">Country</string>
    <string name="zipcode">Zip Code</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="Birthday">Birthday</string>
    <string name="an_contact">Another Contact</string>
    <string name="edit_contact_info">Edit Contact Info</string>
    <string name="add_experience">Add Experience</string>
    <string name="position">Position *</string>
    <string name="company">Company *</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="description">Description</string>
    <string name="cannot_empty">Cannot Empty</string>
    <string name="not_same">%1$s  Cannot Same !</string>
    <string name="not_valid">%1$s  Not Valid !!</string>
    <string name="cant_lesthan">%1$s Less Than %2$s !!</string>
    <string name="posting">Posting</string>
    <string name="article">Article</string>
    <string name="commpanies">Companies</string>
    <string name="job">Jobs</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="contacts">Contacts</string>
    <string name="invitation">Invitation</string>
    <string name="view_all">View All</string>
    <string name="recom_for_you">Recommended for you</string>
    <string name="people">People</string>
    <string name="chart">Chart</string>
    <string name="wishlist">Wishlist</string>
    <string name="category">Category</string>
    <string name="see_all">See all</string>
    <string name="Recomendedfy">Recommended for you</string>
    <string name="trendlearning"><![CDATA[Trending on Worklife&Beyond Learning]]></string>
    <string name="business">Business</string>
    <string name="it_software"><![CDATA[IT & Software]]></string>
    <string name="personal_dev">Personal Development</string>
    <string name="design">Design</string>
    <string name="search_contact">Search contacts...</string>
    <string name="Message">Message</string>
    <string name="my_contacts">My Contacts</string>
    <string name="total">Total</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_2_items">Total %1$s Items</string>

    <string name="abouttimeline">About</string>
    <string name="reviewtimeline">Review</string>
    <string name="commenttimeline">Comment</string>
    <string name="instructortimeline">Instructor</string>
    <string name="no_internet">No Internet Access</string>
</resources>
